--- a/Week4_AbstractClassesAndInterfaces/Week4_AbstractClassesAndInterfaces.csproj
+++ b/Week4_AbstractClassesAndInterfaces/Week4_AbstractClassesAndInterfaces.csproj
@@ -43,6 +43,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Example1\EmailLog.cs" />
+    <Compile Include="Example1\FileLog.cs" />
+    <Compile Include="Example1\IErrorList.cs" />
+    <Compile Include="Example1\ISort.cs" />
+    <Compile Include="Example1\JsonFileLog.cs" />
+    <Compile Include="Example1\Log.cs" />
+    <Compile Include="Example2\I2DCalculations.cs" />
+    <Compile Include="Example2\IShape.cs" />
+    <Compile Include="Example2\Shape.cs" />
+    <Compile Include="Example2\Square.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
